@@ -43,10 +43,10 @@ char *   nautilus_get_desktop_directory              (void);
 char *   nautilus_get_desktop_directory_uri          (void);
 char *   nautilus_get_home_directory_uri             (void);
 gboolean nautilus_is_desktop_directory_file_escaped  (char *escaped_dirname,
-						      char *escaped_filename);
+						      char *filename);
 gboolean nautilus_is_desktop_directory_escaped       (char *escaped_dir);
 gboolean nautilus_is_home_directory_file_escaped     (char *escaped_dirname,
-						      char *escaped_file);
+						      char *filename);
 char *   nautilus_get_gmc_desktop_directory          (void);
 char *   nautilus_get_pixmap_directory               (void);
 
